--- a/tennis-player-web/pom.xml
+++ b/tennis-player-web/pom.xml
@@ -15,14 +15,41 @@
 		<scope>provided</scope>
 	</dependency>
 	
+	<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-validator</artifactId>
+    <version>5.1.3.Final</version>
+</dependency>
+	
+		<!-- For spring MVC -->
+	<dependency>
+ <groupId>org.springframework</groupId>
+ <artifactId>spring-webmvc</artifactId>
+ <version>5.2.12.RELEASE</version>
+</dependency>
+
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+    <scope>runtime</scope>
+</dependency>
+ 
+<dependency>
+    <groupId>taglibs</groupId>
+    <artifactId>standard</artifactId>
+    <version>1.1.2</version>
+    <scope>runtime</scope>
+</dependency>
+	
   </dependencies>
 	<build>
 		<pluginManagement>
 		  	<plugins>
-		<!--	    <plugin>
+			    <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.2</version>
-            </plugin> -->
+            </plugin> 
          
 			<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
