--- a/tennis-player-web/.settings/org.eclipse.core.resources.prefs
+++ b/tennis-player-web/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/views/player-confirmation.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/player-detail.jsp=UTF-8
