--- a/tennis-player-web/pom.xml
+++ b/tennis-player-web/pom.xml
@@ -47,8 +47,9 @@
 		<pluginManagement>
 		  	<plugins>
 			    <plugin>
+			     <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.1.0</version>
             </plugin> 
          
 			<plugin>
